# Pympo

./: .gitignore  LICENSE  README.md  pyproject.toml
1_Proposal+Anzeige/Dissertation Anzeige/: 202106_DissertationAnzeige_BrunoLuna.docx  Lebenslauf-Bruno_Luna.docx
1_Proposal+Anzeige/Dissertation Proposal/: proposal.bbl  proposal.tex  references.bib
2_Presentations/: .gitignore
2_Presentations/IOIs/: IOIs.tex
3_Dissertation/: main.tex
3_Dissertation/bib/: BibtexDatabase.bib
3_Dissertation/content/: 0-Abstract.tex  0-Introduction.tex  0-LiteratureReview.tex  0-Title.tex  1-MaterialsAndMethods.tex  2-Results.tex  3-Discussion.tex  4-SummaryAndOutlook.tex  Z-Appendix-01.tex  Z-Appendix.tex  Z-CV.tex  Z-Declaration.tex  Z-GlossaryEntries.tex  Z-Publications.tex  Z-Thanks.tex  Z-Todo.tex
3_Dissertation/macros/: newcommands.tex
3_Dissertation/preamble/: fix-framed-marginnote.tex  packages-SolutionsNoRoomForNewWrite.tex  packages-tikzpgf.tex  packages.tex  style-biblatex-alpha.tex  style-scrlayer-scrpage.tex  style-scrpage2.tex  style-titletoc.tex  style.tex
4_ReferencesDB/: RefDB_BrunoLuna.bib  RefDB_BrunoLuna.bib.bak  RefJournalAbbvList_BrunoLuna.csv
4_ReferencesDB/ReferencesPDF/: .gitignore  Readme.txt
5_Scripts/APDL/: .gitignore  Remodeling-Template.inp.txt  Ue09-Remod.inp.txt  bsp_remodeling.txt
5_Scripts/FatBeam/: BendStr.m  Damage.m  Input.m  Main.m  Readme.txt  SimplySupBeam.m
5_Scripts/FatPost/: .gitignore  BendStr.m  CantileverBeam.m  Damage.m  DamageJanececk2015.m  Input.m  (+5 more)
pympo/: pympo.py
tests/: test_remodel.py  test_remodel_mapdl.py
(+76 files in other folders)
